--- a/comparison.html
+++ b/comparison.html
@@ -42,12 +42,15 @@
       <br>
       <button onclick="search()" id = "b1">Sammenlign!</button>
       <div id="resultat"></div>
+      <div style="background: red">
+        <div style="background: darkred; width: 25%; text-align: center">25%</div>
+        <div style="background: darkred; width: 66%; text-align: center">66%</div>
+        <div style="background: darkred; width: 78%; text-align: center">78%</div>
+      </div>
     </div>
     
     <br>
     <br>
-
-    <canvas id="myChart" width="200" height="200"></canvas>
     <footer class= "footer">
       <div> Dette er en oppgavebesvarelse i INFO134 vår2020. </div>
     </footer>
